<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtFechaHe"
            android:layout_width="42dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Puesto"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtPuest"
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="49dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/horas_extra"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtNhe"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>